--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<section id="info" data-aos = "fade-up">
 		<div class="author-info" >
 			<img src="images/profile1.jpeg" alt="" class="d-block mx-auto">
-			 <p class="font-sar font-20 font-weight-bold mt-4  ml-2 text-black text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
+			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4 text-black text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
 			</p>
 		</div>		
 	</section>
@@ -282,7 +282,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Web Development</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
@@ -293,7 +293,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Mobile Freindly</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
@@ -304,7 +304,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Video Editing</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
@@ -315,7 +315,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Communication</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
@@ -326,7 +326,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Web Design</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
@@ -337,7 +337,7 @@
 						<div class="card-body">
 							<h3 class="font-sar text-center">Finding Bugs</h3>
 							<p class="font-bar font-18 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. .</p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
