--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	<section id="counter" class="py-5 px-4 bg-light mt-4">
 		<div class="container">
 			<div class="row">				
-				<div class="col-md-3  d-flex justify-content-center border-right" data-aos= "fade-top">
+				<div class="col-md-3  d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/customer-review.png" alt="" width="70">
@@ -111,7 +111,7 @@
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-3 border-counter d-flex justify-content-center border-right" data-aos= "fade-top">
+				<div class="col-md-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/project-management.png" alt="" width="70">
@@ -123,7 +123,7 @@
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-3 border-counter d-flex justify-content-center border-right" data-aos= "fade-top">
+				<div class="col-md-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/settings.png" alt="" width="70">
