--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
 	</section>
 	<!-- contanct section end -->
 	<!-- footer section start -->
-	<section id="footer" class="py-2 mt-4 px-4 bg-light">
-		<div class="row">
+	<section id="footer" class="py-2 mt-4 px-4 bg-light" data-aos = "fade-out">
+		<div class="row" >
 			<div class="col-md-12 mt-4">
 				<p class="font-bar font-16 text-center">
 				2021 &copy;Copyright.All rights reserved.				
