--- a/index.html
+++ b/index.html
@@ -275,68 +275,68 @@
 				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row py-2">
-				<div class="col-md-4 mt-4" data-aos = "fade-up">
-					<div class="card py-5 px-5 card-1">
-						<i class="fa fa-desktop fa-3x text-fav text-center">					
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
+					<div class="card card-1 py-5 px-5">
+						<i class="fa fa-desktop fa-3x text-fav text-center ">					
 						</i>
 						<div class="card-body">
-							<h3 class="font-sar text-center">Web Development</h3>
-							<p class="font-bar font-18 text-center mt-3">
+							<h3 class="font-sar font-20 text-center">Web Development</h3>
+							<p class="font-bar font-16  mt-3 text-center">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
-				</div>
-				<div class="col-md-4 mt-4" data-aos = "fade-up">
+				</div>				
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card py-5 px-5 card-2">
 						<i class="fa fa-mobile fa-3x text-fav text-center">					
 						</i>
 						<div class="card-body">
-							<h3 class="font-sar text-center">Mobile Freindly</h3>
-							<p class="font-bar font-18 text-center mt-3">
+							<h3 class="font-sar font-20 text-center">Mobile Freindly</h3>
+							<p class="font-bar font-16 text-center mt-3">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-4 mt-4" data-aos = "fade-up">
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card py-5 px-5 card-3">
 						<i class="fa fa-video fa-3x text-fav text-center">					
 						</i>
 						<div class="card-body">
-							<h3 class="font-sar text-center">Video Editing</h3>
-							<p class="font-bar font-18 text-center mt-3">
+							<h3 class="font-sar font-20 text-center">Video Editing</h3>
+							<p class="font-bar font-16 text-center mt-3">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-4">
 						<i class="fa fa-users fa-3x text-fav text-center">					
 						</i>
 						<div class="card-body">
-							<h3 class="font-sar text-center">Communication</h3>
-							<p class="font-bar font-18 text-center mt-3">
+							<h3 class="font-sar font-20 text-center">Communication</h3>
+							<p class="font-bar font-16 text-center mt-3">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-5">
 						<i class="fas fa-palette fa-3x text-fav text-center">					
 						</i>
 						<div class="card-body">
-							<h3 class="font-sar text-center">Web Design</h3>
-							<p class="font-bar font-18 text-center mt-3">
+							<h3 class="font-sar font-20 text-center">Web Design</h3>
+							<p class="font-bar font-16 text-center mt-3">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-6">
 						<i class="fa fa-bug fa-3x text-fav text-center">					
 						</i>
-						<div class="card-body">
-							<h3 class="font-sar text-center">Finding Bugs</h3>
-							<p class="font-bar font-18 text-center mt-3">
+						<div class="card-body"> 
+							<h3 class="font-sar font-20 text-center">Finding Bugs</h3>
+							<p class="font-bar font-16 text-center mt-3">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 						</div>
 					</div>					
@@ -362,8 +362,8 @@
 	</section>
 	<!-- contanct section end -->
 	<!-- footer section start -->
-	<section id="footer" class="py-2 mt-4 px-4 bg-light" data-aos = "fade-out">
-		<div class="row" >
+	<section id="footer" class="py-2 mt-4 px-4 bg-light">
+		<div class="row">
 			<div class="col-md-12 mt-4">
 				<p class="font-bar font-16 text-center">
 				2021 &copy;Copyright.All rights reserved.				
