--- a/index.html
+++ b/index.html
@@ -351,13 +351,11 @@
 			<h2 class="font-sar text-center py-2">Get<span class="text-fav">In</span>Touch</h2>		
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
-			</div>
-			<form action="" class="font-bar font-18">
-				<input type="email" name="email" placeholder="Email" class="form-control  ">
-				<input type="text" name="subject" placeholder="Subject" class="form-control ">			
-				
-			</form>
-			<button onclick="myFunction()" value="send" name ="submit" class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" >Send</button>
+			</div>			
+				<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18">
+				<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18">				
+				<button  value="send" id = "submit" name ="submit" type = "submit" 
+				 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" >Send</button>
 		</div>
 	</section>
 	<!-- contanct section end -->
@@ -385,5 +383,8 @@
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>	
 	<script src="js/script.js"></script>
+	<script>
+		
+	</script>
 	</body>
 	</html>
