--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
 			<div class="row py-2">
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card card-1 py-5 px-5">
-						<i class="fa fa-desktop fa-3x text-fav text-center ">					
-						</i>
+						<img src="images/web.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Web Development</h3>
 							<p class="font-bar font-16  mt-3 text-center">
@@ -288,8 +287,7 @@
 				</div>				
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card py-5 px-5 card-2">
-						<i class="fa fa-mobile fa-3x text-fav text-center">					
-						</i>
+						<img src="images/user-interface.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Mobile Freindly</h3>
 							<p class="font-bar font-16 text-center mt-3">
@@ -299,8 +297,7 @@
 				</div>
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card py-5 px-5 card-3">
-						<i class="fa fa-video fa-3x text-fav text-center">					
-						</i>
+						<img src="images/edit-video.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Video Editing</h3>
 							<p class="font-bar font-16 text-center mt-3">
@@ -310,8 +307,7 @@
 				</div>
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-4">
-						<i class="fa fa-users fa-3x text-fav text-center">					
-						</i>
+						<img src="images/conversation.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Communication</h3>
 							<p class="font-bar font-16 text-center mt-3">
@@ -321,8 +317,7 @@
 				</div>
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-5">
-						<i class="fas fa-palette fa-3x text-fav text-center">					
-						</i>
+						<img src="images/settings.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Web Design</h3>
 							<p class="font-bar font-16 text-center mt-3">
@@ -332,8 +327,7 @@
 				</div>
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
 					<div class="card py-5 px-5 card-6">
-						<i class="fa fa-bug fa-3x text-fav text-center">					
-						</i>
+						<img src="images/bug.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body"> 
 							<h3 class="font-sar font-20 text-center">Finding Bugs</h3>
 							<p class="font-bar font-16 text-center mt-3">
