adding teacher review

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Personal Portfolio(KP)</title>
 	<link rel="stylesheet" href="library/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="library/fontawesome/fontawesome-all.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
@@ -58,7 +59,7 @@
 	</nav>	
 	<!-- navigation end -->	
 	<!-- indrouction section start -->
-	<section id="info" data-aos = "fade-up">
+	<section id="info" data-aos = "fade-out">
 		<div class="author-info" >
 			<img src="images/profile1.jpeg" alt="" class="d-block mx-auto">
 			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4 text-black text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
@@ -339,6 +340,110 @@
 		</div>
 	</section>
 	<!-- services section end -->
+	<!-- Swiper section start -->
+	<section id="swiper" class="py-4 px-4 mt-4 bg-light" data-aos = "fade-up">
+		<div class="container">
+			<h2 class="font-sar text-center py-2">Teachers <span class="text-fav">
+				Reviews
+			</span></h2>			
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
+			</div>
+			<div class="swiper-container">
+			    <div class="swiper-wrapper">
+				    <div class="swiper-slide">
+				      	<div class="row">
+				      		<div class="col-md-6" data-aos = "fade-up">
+				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      		</div>
+				      		<div class="col-md-6" data-aos = "fade-up">
+				      			<h5 class="font-sar font-18 font-weight-bold">
+				      				T.Recheal
+				      			</h5>
+				      			<p class="font-bar font-16">
+				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      			</p>
+				      			<p>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star-half text-fav"></i>
+				      			</p>
+				      		</div>
+				      	</div>				      		
+				    </div>
+				    <div class="swiper-slide">
+				      	<div class="row">
+				      		<div class="col-md-6 ">
+				      			<img src="images/teacher (3).png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      		</div>
+				      		<div class="col-md-6 ">
+				      			<h5 class="font-sar font-18 font-weight-bold">
+				      				T.HenderSon
+				      			</h5>
+				      			<p class="font-bar font-16">
+				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      			</p>
+				      			<p>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>				      				
+				      				<i class="fa fa-star text-fav"></i>				      				
+				      			</p>
+				      		</div>
+				      	</div>				      		
+				    </div>
+				    <div class="swiper-slide">
+				      	<div class="row">
+				      		<div class="col-md-6 ">
+				      			<img src="images/teacher (4).png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      		</div>
+				      		<div class="col-md-6 ">
+				      			<h5 class="font-sar font-18 font-weight-bold">
+				      				T.Heather
+				      			</h5>
+				      			<p class="font-bar font-16">
+				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      			</p>
+				      			<p>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star-half text-fav"></i>
+				      			</p>
+				      		</div>
+				      	</div>				      		
+				    </div>
+				    <div class="swiper-slide">
+				      	<div class="row">
+				      		<div class="col-md-6 ">
+				      			<img src="images/instructor.png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      		</div>
+				      		<div class="col-md-6 ">
+				      			<h5 class="font-sar font-18 font-weight-bold">
+				      				T.Brian
+				      			</h5>
+				      			<p class="font-bar font-16">
+				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      			</p>
+				      			<p>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				
+				      			</p>
+				      		</div>
+				      	</div>				      		
+				    </div>
+   			 	</div>
+			    <!-- Add Pagination -->
+			     <div class="swiper-pagination"></div>
+  			</div>
+		</div>
+	</section>
+	<!-- Swiper section end -->
+  	
 	<!-- contanct section start -->
 	<section id="contanct" class="py-4 mt-4 px-4">
 		<div class="container" data-aos = "fade-out">
@@ -372,13 +477,11 @@
 	<script src="library/bootstrap/jquery-3.4.1.slim.min.js"></script>
 	<script src="library/bootstrap/popper.min.js"></script>
 	<script src="library/bootstrap/bootstrap.min.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="library/typed-js/typed.min.js"></script>
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>	
-	<script src="js/script.js"></script>
-	<script>
-		
-	</script>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="js/script.js"></script>	
 	</body>
 	</html>
