--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
 				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<h5 class="font-sar font-18 font-weight-bold">
-				      				T.Recheal
-				      			</h5>
+				      			<h2 class="font-sar font-20">
+				      				T.Racheal
+				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
@@ -378,9 +378,9 @@
 				      			<img src="images/teacher (3).png" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h5 class="font-sar font-18 font-weight-bold">
+				      			<h2 class="font-sar font-18">
 				      				T.HenderSon
-				      			</h5>
+				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
@@ -399,9 +399,9 @@
 				      			<img src="images/teacher (4).png" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h5 class="font-sar font-18 font-weight-bold">
+				      			<h2 class="font-sar font-18 ">
 				      				T.Heather
-				      			</h5>
+				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
@@ -420,9 +420,9 @@
 				      			<img src="images/instructor.png" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h5 class="font-sar font-18 font-weight-bold">
+				      			<h2 class="font-sar font-18">
 				      				T.Brian
-				      			</h5>
+				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
