--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a href="#services" class="nav-link font-bu">Services</a>
 					</li>
 					<li class="nav-item">
-						<a href="#contanct" class="nav-link font-bu">Contanct</a>
+						<a href="#contanct" class="nav-link font-bu">Contact</a>
 					</li>
 
 				</ul>
@@ -358,7 +358,7 @@
 				      		</div>
 				      		<div class="col-md-6" data-aos = "fade-up">
 				      			<h2 class="font-sar font-20">
-				      				T.Racheal
+				      				T.RachealCarson
 				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
@@ -387,7 +387,7 @@
 				      			<p>
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>				      				
+				      				<i class="fa fa-star text-fav"></i>			      				
 				      				<i class="fa fa-star text-fav"></i>				      				
 				      			</p>
 				      		</div>
@@ -400,7 +400,7 @@
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18 ">
-				      				T.Heather
+				      				T.HeatherGraham
 				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
@@ -421,7 +421,7 @@
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18">
-				      				T.Brian
+				      				T.BrianPeppers
 				      			</h2>
 				      			<p class="font-bar font-16">
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
@@ -430,8 +430,7 @@
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>
-				      				
+				      				<i class="fa fa-star text-fav"></i>			      				
 				      			</p>
 				      		</div>
 				      	</div>				      		
@@ -442,8 +441,7 @@
   			</div>
 		</div>
 	</section>
-	<!-- Swiper section end -->
-  	
+	<!-- Swiper section end -->  	
 	<!-- contanct section start -->
 	<section id="contanct" class="py-4 mt-4 px-4">
 		<div class="container" data-aos = "fade-out">
