--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			</a>
 			<button class="navbar-toggler " data-toggle="collapse" data-target="#navbar">
 				<i class="fas fa-bars"></i>
+				<i class="fas fa-times"></i>
 			</button>
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
