--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 				<a href="index.html" class="navbar-brand font-big-shoulder font-30">
 				Khant<span class="text-fav">Phone</span>
 			</a>
-			<button class="navbar-toggler " data-toggle="collapse" data-target="#navbar">
-				<i class="fas fa-bars"></i>
-				<i class="fas fa-times"></i>
+			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
+				<i class="fas fa-bars ml-auto"></i>
+				<i class="fas fa-times ml-auto"></i>
 			</button>
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
@@ -60,7 +60,7 @@
 	</nav>	
 	<!-- navigation end -->	
 	<!-- indrouction section start -->
-	<section id="info" data-aos = "fade-out">
+	<section id="info" data-aos = "fade-up">
 		<div class="author-info" >
 			<img src="images/profile1.jpeg" alt="" class="d-block mx-auto">
 			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4 text-black text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
