--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</nav>	
 	<!-- navigation end -->	
 	<!-- indrouction section start -->
-	<section id="info" data-aos = "fade-up">
+	<section id="info" data-aos = "fade-in">
 		<div class="author-info" >
 			<img src="images/profile1.jpeg" alt="" class="d-block mx-auto">
 			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4 text-black text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
