--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 	<link rel="shortcut icon" href="images/profile2.jpeg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
