--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class="col-md-6 d-flex" data-aos = "fade-up">
 					<div class="about-me">
 						<h2 class="font-sar">About Me</h2>
-						<p class="font-bar font-18 mt-4">Hey! I am Khant Phone who is learnig web development and passionate about coding.</p>
+						<p class="font-bar font-18 mt-4">Hey! I am Khant Phone who is learnig web development and enjoy about coding.</p>
 						<p class="font-bar font-18 mt-3">I learned web development since 2019 . I am learning LARAVEL at the moment.</p> 
 						<p class="font-bar font-18 mt-3">Currently learning Programming & Japanese Courses at <a href="http://metro-myanmar.com/mic/" >
 						Metro IT & Japanese Language Center .</a></p>
