adding real data to lorems text

--- a/index.html
+++ b/index.html
@@ -261,7 +261,13 @@
 					</div>
 				</div>
 				<div class="col-md-6 mt-4">
-					<p class="font-18 font-bar mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere excepturi sed nam placeat, quod. Similique nesciunt illo quibusdam aspernatur at, iste nemo, natus magni ut, neque, qui. Quod, incidunt, quaerat?Lorem ipsum dolor sit amet consectetur adipisicing, elit. Velit nam facere itaque minima sit in architecto, iste beatae vel quam?</p>
+					<p class="font-18 font-bar mt-5">
+					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql )  
+					 and want to learn new things .
+					Experienced in some IDE ( Atom , Sublime Text 3, Eclipse , Visual Studio Code ) .
+					Familiar with Plugins and Library ( BootStrap , Swiper , TypedJs , SweetAlert ) .
+					Also good in social relations and respect to others .					
+					</p>
 				</div>
 			</div>
 		</div>
@@ -283,17 +289,17 @@
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Web Development</h3>
 							<p class="font-bar font-16  mt-3 text-center">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							Willing to give you advices about your Website .</p>
 						</div>
-					</div>					
-				</div>				
+					</div>				
+				</div>					
 				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
 					<div class="card py-5 px-5 card-2">
 						<img src="images/user-interface.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Mobile Freindly</h3>
 							<p class="font-bar font-16 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							Build your own Website reponsive to any device .</p>
 						</div>
 					</div>					
 				</div>
@@ -303,7 +309,7 @@
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Video Editing</h3>
 							<p class="font-bar font-16 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							Editing video if neccessary about your Website .</p>
 						</div>
 					</div>					
 				</div>
@@ -313,7 +319,8 @@
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Communication</h3>
 							<p class="font-bar font-16 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+								Making Website Design & Patterns as You prefer ! 
+							</p>
 						</div>
 					</div>					
 				</div>
@@ -323,7 +330,7 @@
 						<div class="card-body">
 							<h3 class="font-sar font-20 text-center">Web Design</h3>
 							<p class="font-bar font-16 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							Give you advices how Your Website Design should be .</p>
 						</div>
 					</div>					
 				</div>
@@ -333,7 +340,7 @@
 						<div class="card-body"> 
 							<h3 class="font-sar font-20 text-center">Finding Bugs</h3>
 							<p class="font-bar font-16 text-center mt-3">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							Always taking reponsibility about your Webiste Bugs .</p>
 						</div>
 					</div>					
 				</div>
@@ -355,16 +362,16 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto " width="150">
 				      		</div>
 				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<h2 class="font-sar font-20">
+				      			<h2 class="font-sar font-20 text-center">
 				      				T.RachealCarson
 				      			</h2>
-				      			<p class="font-bar font-16">
+				      			<p class="font-bar font-16 text-center">				      				
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
-				      			<p>
+				      			<p class="text-center">
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
