adding real data to lorems text

--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
 				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto " width="150">
 				      		</div>
 				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<h2 class="font-sar font-20 text-center">
+				      			<h2 class="font-sar font-20 ">
 				      				T.RachealCarson
 				      			</h2>
-				      			<p class="font-bar font-16 text-center">				      				
+				      			<p class="font-bar font-16 ">				      				
 				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
 				      			</p>
-				      			<p class="text-center">
+				      			<p class="">
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
