adding real teacher photo

--- a/index.html
+++ b/index.html
@@ -361,36 +361,15 @@
 			    <div class="swiper-wrapper">
 				    <div class="swiper-slide">
 				      	<div class="row">
-				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<img src="images/teacher.png" alt="" class="img-fluid d-block mx-auto " width="150">
-				      		</div>
-				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<h2 class="font-sar font-18">
-				      				T.RachealCarson
-				      			</h2>
-				      			<p class="font-bar font-16">				      				
-				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
-				      			</p>
-				      			<p class="">
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star-half text-fav"></i>
-				      			</p>
-				      		</div>
-				      	</div>				      		
-				    </div>
-				    <div class="swiper-slide">
-				      	<div class="row">
 				      		<div class="col-md-6 ">
-				      			<img src="images/teacher (3).png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      			<img src="images/teacherReview1.jpeg" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18">
-				      				T.HenderSon
+				      				T.MyatPhyoPhyo ( English )
 				      			</h2>
 				      			<p class="font-bar font-16">
-				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      				Khant Phone was a student who is committed on whatever he decided to do. He has a good personality and always does the best job with few mistakes. There is no doubt that he will develop and produce effective outcomes with great efforts because of his enthusiasm and committment on his job.
 				      			</p>
 				      			<p>
 				      				<i class="fa fa-star text-fav"></i>
@@ -401,17 +380,38 @@
 				      		</div>
 				      	</div>				      		
 				    </div>
+				    <div class="swiper-slide">				      	
+				      	<div class="row">
+				      		<div class="col-md-6" data-aos = "fade-up">
+				      			<img src="images/teacherReview2.jpeg" alt="" class="img-fluid d-block mx-auto ">
+				      		</div>
+				      		<div class="col-md-6" data-aos = "fade-up">
+				      			<h2 class="font-sar font-18">
+				      				T.HlaingTinHtun ( IT )
+				      			</h2>
+				      			<p class="font-bar font-16">				      				
+				      				 Khant did a great job and submitted the assignments well through out the Extensive PHP course. 
+				      			</p>
+				      			<p class="">
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      			</p>
+				      		</div>
+				      	</div>				      		
+				    </div>
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-6 ">
-				      			<img src="images/teacher (4).png" alt="" class="img-fluid d-block mx-auto" width="150">
+				      			<img src="images/techerReview3.jpeg" alt="" class="img-fluid d-block mx-auto" width="150">
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18 ">
-				      				T.HeatherGraham
+				      				T.KhinWaiWaiKyaw ( IT )
 				      			</h2>
 				      			<p class="font-bar font-16">
-				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
+				      				It is my great pleasure to recommend Khant Phone for the role of Web developer.
+									While studying in Metro IT and Japanese Language Centre, he has shown great potential in his academic achievements.
 				      			</p>
 				      			<p>
 				      				<i class="fa fa-star text-fav"></i>
@@ -421,28 +421,7 @@
 				      			</p>
 				      		</div>
 				      	</div>				      		
-				    </div>
-				    <div class="swiper-slide">
-				      	<div class="row">
-				      		<div class="col-md-6 ">
-				      			<img src="images/instructor.png" alt="" class="img-fluid d-block mx-auto" width="150">
-				      		</div>
-				      		<div class="col-md-6 ">
-				      			<h2 class="font-sar font-18">
-				      				T.BrianPeppers
-				      			</h2>
-				      			<p class="font-bar font-16">
-				      				Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat facilis non modi quam. Earum perspiciatis a atque incidunt minus totam?
-				      			</p>
-				      			<p>
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>
-				      				<i class="fa fa-star text-fav"></i>			      				
-				      			</p>
-				      		</div>
-				      	</div>				      		
-				    </div>
+				    </div>				   
    			 	</div>
 			    <!-- Add Pagination -->
 			     <div class="swiper-pagination"></div>
