adding real teacher photo

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-6 ">
-				      			<img src="images/teacherReview1.jpeg" alt="" class="img-fluid d-block mx-auto" width="150">
+				      			<img src="images/teacherReview1.jpeg" alt="" class="img-fluid d-block mx-auto" >
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18">
@@ -390,7 +390,9 @@
 				      				T.HlaingTinHtun ( IT )
 				      			</h2>
 				      			<p class="font-bar font-16">				      				
-				      				 Khant did a great job and submitted the assignments well through out the Extensive PHP course. 
+				      				 Khant did a great job and submitted the assignments well through out the <a href="https://aprogrammer.blog/extphp">
+				      				 Extensive PHP course
+				      				 </a>. 
 				      			</p>
 				      			<p class="">
 				      				<i class="fa fa-star text-fav"></i>
@@ -403,7 +405,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-6 ">
-				      			<img src="images/techerReview3.jpeg" alt="" class="img-fluid d-block mx-auto" width="150">
+				      			<img src="images/teacherReview3.jpeg" alt="" class="img-fluid d-block mx-auto">
 				      		</div>
 				      		<div class="col-md-6 ">
 				      			<h2 class="font-sar font-18 ">
@@ -411,7 +413,9 @@
 				      			</h2>
 				      			<p class="font-bar font-16">
 				      				It is my great pleasure to recommend Khant Phone for the role of Web developer.
-									While studying in Metro IT and Japanese Language Centre, he has shown great potential in his academic achievements.
+									While studying in <a href="http://metro-myanmar.com/mic/">
+									Metro IT & Japanese Language Center </a>
+									, he has shown great potential in his academic achievements.
 				      			</p>
 				      			<p>
 				      				<i class="fa fa-star text-fav"></i>
