adding real teacher photo

--- a/index.html
+++ b/index.html
@@ -425,6 +425,27 @@
 				      			</p>
 				      		</div>
 				      	</div>				      		
+				    </div>
+				    <div class="swiper-slide">
+				      	<div class="row">
+				      		<div class="col-md-6 ">
+				      			<img src="images/teacherReview4.jpeg" alt="" class="img-fluid d-block mx-auto">
+				      		</div>
+				      		<div class="col-md-6 ">
+				      			<h2 class="font-sar font-18 ">
+				      				T.ChainTheeMoh ( Japanese )
+				      			</h2>
+				      			<p class="font-bar font-16">
+				      				Since Nov 2019, he has been studying Japanese together with IT.  Now he has finished Japanese level N3 and is starting to study N2.  He is pure and quiet.  However, he did his best to give a Japanese speech in the class.  He is a good boy.
+				      			</p>
+				      			<p>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      				<i class="fa fa-star text-fav"></i>
+				      			</p>
+				      		</div>
+				      	</div>				      		
 				    </div>				   
    			 	</div>
 			    <!-- Add Pagination -->
