--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>
 				      				<i class="fa fa-star text-fav"></i>			      				
-				      				<i class="fa fa-star text-fav"></i>			      				
+				      				<i class="fa fa-star-half text-fav"></i>			      				
 				      			</p>
 				      		</div>
 				      	</div>				      		
