--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="library/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="library/fontawesome/fontawesome-all.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
@@ -262,7 +263,7 @@
 				</div>
 				<div class="col-md-6 mt-4">
 					<p class="font-18 font-bar mt-5">
-					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql )  
+					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql & GIT )  
 					 and want to learn new things .
 					Experienced in some IDE ( Atom , Sublime Text 3, Eclipse , Visual Studio Code ) .
 					Familiar with Plugins and Library ( BootStrap , Swiper , TypedJs , SweetAlert ) .
