--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="library/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="library/fontawesome/fontawesome-all.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
@@ -204,8 +203,25 @@
 								</button>	
 							</a>					
 						 </div>
-				</div>			
-				<div class="col-md-6" data-aos ="fade-top">
+				</div>
+				<div class="col-md-6" data-aos ="fade-out">
+					<a href="https://khantphone.github.io/CheckOutForm/">
+						<img src="images/Bs-checkOut.png" alt="Bs-checkOut" class="img-fluid">
+					</a>					 
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">
+					 	CheckOutForm 
+					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
+						<div class="live-preview mt-4">	
+							<a href="https://khantphone.github.io/CheckOutForm/">					
+								<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white font-bu"><i class="fas fa-eye mr-2"></i> Live Preview
+								</button>	
+							</a>				
+						 </div>
+				</div>		
+							
+			</div>
+			<div class="row">				
+				<div class="col-md-6 d-block mx-auto" data-aos ="fade-top">
 					 <a href="https://khantphone.github.io/Ecommerce/.">
 					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
@@ -217,7 +233,7 @@
 								</button>
 							</a>												
 						 </div>
-				</div>				
+				</div>	
 			</div>
 			<p class="font-sar text-center mt-3 font-18 info-backend">
 				If u want to watch Back-End projects , <a href="backend.html"> Click Here !</a>
