adding completed-prj

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<p class="font-bar font-18 mt-3">Currently learning Programming & Japanese Courses at <a href="http://metro-myanmar.com/mic/" >
 						Metro IT & Japanese Language Center .</a></p>
 						<p class="font-bar font-18 mt-3">Completed courses from <a href="https://aprogrammer.blog/">AProgrammer.blog  . </a></p>
-						<div class="reach-to-me mt-5">
+						<div class="reach-to-me mt-5" data-aos = "fade-up">
 							<a href="https://www.facebook.com/khant.phonekh">
 								<button class="btn px-5 py-2 font-bu text-white bg-fav" >Reach Me</button>
 							</a>
@@ -481,7 +481,7 @@
 				<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18">
 				<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18">				
 				<button  value="send" id = "submit" name ="submit" type = "submit" 
-				 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" >Send</button>
+				 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" data-aos ="fade-up">Send</button>
 		</div>
 	</section>
 	<!-- contanct section end -->
