fixing js errors

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">	
@@ -243,7 +243,7 @@
 	<!-- completedProject section end -->
 	<!-- myskills section start -->
 	<section id="myskills" class="py-4 px-4 mt-4 bg-light">
-		<div class="container" data-aos = "fade-up">
+		<div class="container" >
 			<h2 class="font-sar text-center py-2">My <span class="text-fav">
 				Skills
 			</span></h2>			
@@ -251,7 +251,7 @@
 				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row py-5">
-				<div class="col-md-6 mt-2">
+				<div class="col-md-6 mt-2" data-aos ="fade-up">
 					<div class="d-flex mt-3">						
 						<p class="font-16 font-bu ">HTML</p>						
 					</div>
@@ -277,7 +277,7 @@
 						<div class="progress-bar " style="width:50%; background: #FFFA9E;"></div>
 					</div>
 				</div>
-				<div class="col-md-6 mt-4">
+				<div class="col-md-6 mt-4" data-aos = "fade-up">
 					<p class="font-18 font-bar mt-5">
 					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql & GIT )  
 					 and want to learn new things .
