--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						 </div>
 				</div>	
 			</div>
-			<p class="font-sar text-center mt-3 font-18 info-backend text-dark">
+			<p class="font-sar text-center mt-3 font-18 info-backend muted-text">
 				If u want to watch Back-End projects , <a href="backend.html"> Click Here !</a>
 			</p>
 		</div>
@@ -492,10 +492,10 @@
 	<section id="footer" class="py-2 mt-4 px-4 bg-light">
 		<div class="row">
 			<div class="col-md-12 mt-4">
-				<p class="font-bar font-16 text-center text-dark">
+				<p class="font-bar font-16 text-center muted-text">
 				2021 &copy;Copyright.All rights reserved.				
 				</p>
-				<p class="font-big-shoulder font-16 text-center text-dark">
+				<p class="font-big-shoulder font-16 text-center muted-text">
 				<i class="fa fa-heartbeat mr-1" aria-hidden="true"></i><span class="font-bar">By </span>Khant <span class="text-fav">Phone</span>				
 				</p>
 			</div>						
