--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	</section>
 	<!-- myskills section end -->
 	<!-- services section start -->
-	<section id="services" class="py-4 px-4 mt-4  ">
+	<section id="services" class="py-4 px-4 mt-4">
 		<div class="container">
 			<h2 class="font-sar text-center py-2 text-dark">My <span class="text-fav">
 				Services
@@ -477,12 +477,12 @@
 	<!-- contanct section start -->
 	<section id="contanct" class="py-4 mt-4 px-4">
 		<div class="container" data-aos = "fade-out">
-			<h2 class="font-sar text-center py-2 text-dark">Get<span class="text-fav">In</span>Touch</h2>		
+			<h2 class="font-sar text-center py-2 text-dark">Get<span class="text-fav">In</span>Touch</h2>	
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
 			</div>			
-				<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18">
-				<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18">				
+				<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18 border-bt">
+				<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18 border-bt">				
 				<button  value="send" id = "submit" name ="submit" type = "submit" 
 				 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" data-aos ="fade-up">Send</button>
 		</div>
