--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 <body>
 	
-	<!-- loader-content start -->
-	<div id="content">
+	
 	<!-- navigation start -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 		<div class="container-fluid ">
@@ -60,7 +59,10 @@
 	</nav>	
 	<!-- navigation end -->	
 	<!-- toogle checkbox start -->
-	<input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+	<section id="toggle-checkbox">		
+		<p class="font-15 font-bar text-dark font-weight-bold">Dark Mode</p>
+		<input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
+	</section>
 	<!-- toogle checkbox end -->
 	<!-- indrouction section start -->
 	<section id="info" data-aos = "fade-in">
@@ -502,8 +504,6 @@
 		</div>
 	</section>
 	<!-- footer section end -->		
-	</div>
-	<!-- loader-content end -->
 	<script src="library/bootstrap/jquery-3.4.1.slim.min.js"></script>
 	<script src="library/bootstrap/popper.min.js"></script>
 	<script src="library/bootstrap/bootstrap.min.js"></script>
